correction overflow version mobile

--- a/assets/css/scripts.css
+++ b/assets/css/scripts.css
@@ -53,10 +53,13 @@
   .wrapper .right-box {
     display: flex;
     flex-direction: column; }
+    @media (max-width: 480px) {
+      .wrapper .right-box {
+        height: auto; } }
     .wrapper .right-box header {
       width: 100%;
       height: 4em;
-      padding-top: 1.3em;
+      padding: 1.3em 0;
       background-color: var(--blanc-casse); }
       .wrapper .right-box header h3 {
         text-align: center;
@@ -71,7 +74,7 @@
       padding: 1em; }
       @media (max-width: 480px) {
         .wrapper .right-box main {
-          overflow: none; } }
+          overflow: hidden; } }
       .wrapper .right-box main .blog__content {
         width: 95%;
         border-radius: 0.5em;
