--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -49,12 +49,15 @@
         }
     }
     .right-box {
+        @include xs {
+            height: auto;
+        }
         display: flex;
         flex-direction: column;
         header {
             width: 100%;
             height: 4em;
-            padding-top: 1.3em;
+            padding: 1.3em 0;
             background-color: var(--blanc-casse);
             h3 {
                 text-align: center;
@@ -65,7 +68,7 @@
         }
         main {
             @include xs {
-                overflow: none;
+                overflow: hidden;
             }
             width: 100%;
             overflow: auto;
